--- a/_config.yaml
+++ b/_config.yaml
@@ -1,5 +1,5 @@
 title: Shubham Vedi
-# logo: /assets/img/headshot_circle.png
+# logo: /assets/img/profile.jpg
 description: 🚀 Data Science Enthusiast | Generative AI | LLM | ChatGPT | Data Analyst | Machine Learning | NLP | SQL | Python | Excel | Power BI
 show_downloads: true
 theme: jekyll-theme-minimal
